--- a/themes/default/partials/beaches.htm
+++ b/themes/default/partials/beaches.htm
@@ -13,33 +13,49 @@
 ?>	
 
 ==
-
-{% for beach in beaches %}
+{% if beaches|length > 0 %}
 	
-	<div class="event">
-		<div class="overlay-img">
-			<br>
-		</div><img class="rec-img fr-fic fr-dii" src="{{beach.viewBag.cover}}">
-		<div class="txt-container">
+	<div class="search-title-container">
+      {% if beaches|length > 1 %}
+        <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{beaches|length}} {{ 'playas que se adaptan ti'|_ }}</p>
+       {% else %}
+         <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{beaches|length}} {{ 'playa que se adaptan ti'|_ }}</p>
+       {% endif %}
+  	</div>
 
-			<p class="name">{{beach.viewBag.title}}</p><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
-			<div class="icons">
-				<div class="icon-pair">
-					<img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(beach.viewBag.categoriea)}}.svg" class="fr-fil fr-dib">
+	{% for beach in beaches %}
+		
+		<div class="event">
+			<div class="overlay-img">
+				<br>
+			</div><img class="rec-img fr-fic fr-dii" src="{{beach.viewBag.cover}}">
+			<div class="txt-container">
 
-					<p class="icon-txt">
-              			{{beach.viewBag.categoriea|_}}
-					</p>
+				<p class="name">{{beach.viewBag.title}}</p><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
+				<div class="icons">
+					<div class="icon-pair">
+						<img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(beach.viewBag.categoriea)}}.svg" class="fr-fil fr-dib">
+
+						<p class="icon-txt">
+	              			{{beach.viewBag.categoriea|_}}
+						</p>
+					</div>
+					<div class="icon-pair">
+						<img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(beach.viewBag.categorieb)}}.svg" class="fr-fil fr-dib">
+						<p class="icon-txt">
+							{{beach.viewBag.categorieb|_}}
+						</p>
+					</div>
 				</div>
-				<div class="icon-pair">
-					<img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(beach.viewBag.categorieb)}}.svg" class="fr-fil fr-dib">
-					<p class="icon-txt">
-						{{beach.viewBag.categorieb|_}}
-					</p>
-				</div>
+				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{beach.viewBag.url}}">{{'Ver playa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 			</div>
-			<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{beach.viewBag.url}}">{{'Ver playa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 		</div>
-	</div>
-	
-{% endfor %}
+		
+	{% endfor %}
+
+{% else %}
+<div class="search-title-container">
+     <p class="title-search"> {{ 'No hemos encontrado resultados que se adapten a tus criterios.'|_ }}</p>
+</div>
+
+{% endif %}
