--- a/themes/default/partials/site/searchplaya.htm
+++ b/themes/default/partials/site/searchplaya.htm
@@ -55,7 +55,7 @@
         </div>
 
       <div class="button-container">
-        <input id="bscRuta" type="submit" value="{{ 'Ver playas'|_ }}">
+        <input id="bscPlaya" type="submit" value="{{ 'Ver playas'|_ }}">
       </div>
     </form>
   </div>
