--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -139,7 +139,7 @@ code = "redes-sociales"
 
         <div class="header-txt">
             <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Playas"|_ }}</span><span class="con-encanto" style="display: block;"> &nbsp</span></h1>
-            <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
+            <img class="brush brushTop" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
         </div>
 
         <!-- SEARCH -->
