--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4955,12 +4955,14 @@ p > br {
         .enlaces{
           background-color: #F4F4F4;
           border-radius: 4px;
+          border: solid 1px #979797;
           padding: 5px 20px;
           z-index: 2;
-          width: 240px;
+          width: 189px;
+          line-height: 15px;
         }
           position: absolute;
-          width: 240px;
+          width: 189px;
           bottom: 12px;
           left: -8px;
           padding: 5px 0px;
@@ -4991,8 +4993,13 @@ p > br {
           font-family: 'AvenirNext-Medium', sans-serif;
           margin-bottom: 13px;
           text-decoration: none;
-          span{
+          .flechaplayas{
+            background-image: url("../svg/flechaplayas.svg");
+            height: 9px;
+            width: 10px!important;
             margin-left: 10px;
+            display: inline-block;
+            background-repeat: no-repeat;
           }
           &:hover{
             opacity:0.8;
