--- a/themes/default/partials/beaches.htm
+++ b/themes/default/partials/beaches.htm
@@ -44,24 +44,25 @@
 							</p>
 						</div>
 						<p>&nbsp;</p>
-						<div class="icon-pair">
+						<div class="icon-pair lwc">
 							{% set cb = beach.viewBag.categorieb|split(',') %}
 							<img src="{{preurl}}/storage/app/media/uploaded-files/templates/caracteristicas-blanco.svg" class="fr-fil fr-dib">
 							<p class="icon-txt">
 
 								{{cb[0]|_}}
-							</p>
+							
 							{% if cb|length > 1 %}
 								{% for cbi in cb %}								
 								&nbsp;&nbsp;
 								{% if cbi != cb[0] %}
-								<p class="icon-txt">
+								
 
 									{{cbi|_}}
-								</p>
+								
 								{% endif %}
 								{% endfor %}
 							{% endif %}
+							</p>
 						</div>
 					</div>
 					<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{beach.viewBag.url}}">{{'Ver playa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
