--- a/plugins/rainlab/pages/assets/css/style-home.css
+++ b/plugins/rainlab/pages/assets/css/style-home.css
@@ -91,6 +91,8 @@
         left: 53px;
         bottom: 50px; }
         .whats-on .right-photos .element .txt-container .date {
+          margin-bottom: 0px!important;
+          padding-bottom: 20px!important;
           font-size: 18px;
           color: white;
           font-weight: 100;
