--- a/plugins/rainlab/pages/assets/css/style-home.css
+++ b/plugins/rainlab/pages/assets/css/style-home.css
@@ -92,11 +92,11 @@
         bottom: 50px; }
         .whats-on .right-photos .element .txt-container .date {
           margin-bottom: 0px!important;
-          padding-bottom: 20px!important;
+          padding-bottom: 15px!important;
           font-size: 18px;
           color: white;
           font-weight: 100;
-          line-height: 48px; }
+          //line-height: 48px; }
         .whats-on .right-photos .element .txt-container .name {
           font-size: 39px;
           color: white;
