playas Municipios especificos

--- a/themes/default/partials/site/searchplaya.htm
+++ b/themes/default/partials/site/searchplaya.htm
@@ -10,7 +10,7 @@
       $this['lang']='es';
     }
 
-    $this['municipalities'] = $this->staticApp->getMunicipalities();
+    $this['municipalities'] = $this->staticApp->getMunicipalitiesBeaches();
     $this['types'] = $this->staticApp->getBeachCategoriesType();
     $this['categories'] = $this->staticApp->getBeachCategoriesOptions();
   }
